CS-DOJO: New component of the blob. Notes from various texts I am studying.

--- a/_posts/lecture-notes/plp/2017-01-04-1.md
+++ b/_posts/lecture-notes/plp/2017-01-04-1.md
@@ -3,6 +3,8 @@ layout: post
 title:  "PLP: Lecture 1"
 date:   2017-01-04
 category: lecture-notes
+keywords: 
+- introduction
 ---
 
 <script type="text/javascript" async
