--- a/_posts/lecture-notes/plp/2017-01-06-2.md
+++ b/_posts/lecture-notes/plp/2017-01-06-2.md
@@ -3,6 +3,9 @@ layout: post
 title:  "PLP: Lecture 2"
 date:   2017-01-06
 category: lecture-notes
+keywords: 
+- lexical analysis / 
+- regular expressions
 ---
 
 <script type="text/javascript" async
