--- a/_posts/lecture-notes/plp/2017-01-06-3.md
+++ b/_posts/lecture-notes/plp/2017-01-06-3.md
@@ -3,6 +3,8 @@ layout: post
 title:  "PLP: Lecture 3"
 date:   2017-01-09
 category: lecture-notes
+keywords: 
+- implementing a scanner
 ---
 
 <script type="text/javascript" async
