--- a/_posts/lecture-notes/plp/2017-01-11-4.md
+++ b/_posts/lecture-notes/plp/2017-01-11-4.md
@@ -3,6 +3,8 @@ layout: post
 title:  "PLP: Lecture 4"
 date:   2017-01-11
 category: lecture-notes
+keywords:
+- context free grammars 
 ---
 
 <script type="text/javascript" async
