--- a/_posts/lecture-notes/plp/2017-01-13-5.md
+++ b/_posts/lecture-notes/plp/2017-01-13-5.md
@@ -3,6 +3,8 @@ layout: post
 title:  "PLP: Lecture 5"
 date:   2017-01-13
 category: lecture-notes
+keywords: 
+- parsing pt. 1
 ---
 
 <script type="text/javascript" async
