--- a/_posts/lecture-notes/plp/2017-01-18-6.md
+++ b/_posts/lecture-notes/plp/2017-01-18-6.md
@@ -3,6 +3,8 @@ layout: post
 title:  "PLP: Lecture 6"
 date:   2017-01-18
 category: lecture-notes
+keywords: 
+- parsing pt. 2
 ---
 
 <script type="text/javascript" async
