--- a/_posts/lecture-notes/plp/2017-01-20-7.md
+++ b/_posts/lecture-notes/plp/2017-01-20-7.md
@@ -3,6 +3,8 @@ layout: post
 title:  "PLP: Lecture 7"
 date:   2017-01-20
 category: lecture-notes
+keywords: 
+- recursive descent parsers
 ---
 
 <script type="text/javascript" async
