--- a/_posts/lecture-notes/plp/2017-01-25-9.md
+++ b/_posts/lecture-notes/plp/2017-01-25-9.md
@@ -3,6 +3,9 @@ layout: post
 title:  "PLP: Lecture 8"
 date:   2017-01-23
 category: lecture-notes
+keywords:
+- variable access / 
+- static scope
 ---
 
 <script type="text/javascript" async
