--- a/_posts/lecture-notes/plp/2017-01-23-8.md
+++ b/_posts/lecture-notes/plp/2017-01-23-8.md
@@ -3,6 +3,8 @@ layout: post
 title:  "PLP: Lecture 8"
 date:   2017-01-23
 category: lecture-notes
+keywords: 
+- name scopes
 ---
 
 <script type="text/javascript" async
