--- a/_posts/lecture-notes/plp/2017-01-27-10.md
+++ b/_posts/lecture-notes/plp/2017-01-27-10.md
@@ -4,7 +4,8 @@ title:  "PLP: Lecture 10"
 date:   2017-01-27
 category: lecture-notes
 keywords:
-- dynamic scope
+- dynamic scope / 
+- implementing static scope
 ---
 
 <script type="text/javascript" async
