--- a/_posts/lecture-notes/plp/2017-01-30-11.md
+++ b/_posts/lecture-notes/plp/2017-01-30-11.md
@@ -4,7 +4,9 @@ title:  "PLP: Lecture 11"
 date:   2017-01-30
 category: lecture-notes
 keywords:
-- implementing dynamic scope
+- implementing dynamic scope /  
+- closures / 
+- first class objects
 ---
 
 <script type="text/javascript" async
