PLP lecture 13 complete

--- a/_posts/lecture-notes/plp/2017-02-01-12.md
+++ b/_posts/lecture-notes/plp/2017-02-01-12.md
@@ -77,7 +77,7 @@ The 4 is coerced into a floating point number, and then the correct '+' is chose
 
 Coercion rules are different for different languages!
 
-# Chapter 4 - Semantic Analysis
+### Chapter 4 - Semantic Analysis
 
 ## Context constraints
 
@@ -92,7 +92,7 @@ Examples of static constraints:
 3. Compatible types during declaration
 4. Every function must contain at least one return statement
 
-*Static analysis* is what's done to check these constraints. Can be described in terms of "decoration" of a syntax tree. The analysis is **precise** if the compiler can determine whether a griven program follows the rules.  
+*Static analysis* is what's done to check these constraints. Can be described in terms of *decoration* of a syntax tree. The annotations themselves are known as *attributes*. The analysis is **precise** if the compiler can determine whether a griven program follows the rules.  
 
 ## Role of semantic analyzer
 
