--- a/_posts/lecture-notes/plp/2017-02-03-13.md
+++ b/_posts/lecture-notes/plp/2017-02-03-13.md
@@ -4,7 +4,8 @@ title:  "PLP: Lecture 13"
 date:   2017-02-03
 category: lecture-notes
 keywords:
-- 
+- Evaluating attributes / 
+- Abstract syntax trees
 ---
 
 <script type="text/javascript" async
@@ -19,6 +20,9 @@ MathJax.Hub.Config({
 </script>
 
 ---
+## Attribute flow
+
+**Attribute flow** is the pattern in which information moves from node to node in the parse tree.
 
 ## Synthesized and Inherited Attributes
 
@@ -28,8 +32,6 @@ An inherited attribute is one that is not synthesized. Imformation may flow to a
 
 In compilers, symbol table information is often pased using inherited attributes. *Look at example in Scott (4.3?) where he uses an inherited attribute grammar in an LL(1) grammar for expressions to obtain left associativity.*
 
-## Attribute flow
-
 AGs are **declarative**- define set of valid trees, but don't specify how to build or decorate them.
 
 AGs can be well-defined; rules determine a unique set of values for every possible parse tree. Also can be non-circular; never yield a parse tree with cycles in the attribute flow graph. They can also be both circular and well-defined. 
@@ -38,18 +40,47 @@ AGs can be well-defined; rules determine a unique set of values for every possib
 
 Repeated passes over the tree, computing any attribute whose arguments are defined. Terminates when values no longer change.
 
-If tree is non-cyclic, use a dynamic scheme that tailors the evaluation order to the structure of the given tree. 
+If tree is non-cyclic, use a *dynamic scheme* that tailors the evaluation order to the structure of the given tree. Construct a dependency graph and then perform a topological sort on dependency graph, followed by evaluating semantic rules in order of sort. 
 
 ## In compilers
 
 Fastest translation schemes are static on a restricted set of AGs.
 Anything interleaved with parsing in a recursive descent parser must be specifiable with an L-attributed grammar. 
 
+A common approach is to interleave construction of an abstract syntax tree (AST) with parsing (no explicit parse tree).
+
 ## S-attributed AG
 
-All attributes are synthesized. Can be computed by single bottom-up traversal of the syntax tree. This can be interleaved with parsing. 
+All attributes are synthesized. Can be computed by single bottom-up traversal of the syntax tree. This can be interleaved with parsing. The arguments to semantic functions in an S-attributed AG are always attributes of symbols on the right-hand side of the current production, and the return value is always placed into an attribute of the left-hand side of the production. 
 
 ## L-attributed AG
 
-Can be computed with a single left-to-right depth first traversal of the parse tree. Can be computed on-the-fly during an LL(1) parse.
+Can be computed with a single left-to-right depth first traversal of the parse tree. Can be computed on-the-fly during an LL(1) parse since this is the same order that nodes are generated during an LL parse.
 
+If we say that attribute A.s **depends** on B.t (bc B.t is passed to a semantic function that returns a value for A.s) then we can define L-attributed grammars with the following: 
+
+* Each synthesized attribute of a left-hand-side symbol depends only on that symbol's own inherited attributes or on attributes (synthesized or inherited) of the production's right-hand-size symbols
+* Each inherited attribute of a right-hand-side symbol depends only on inherited attributes of the left-hand-side symbol or on attributes (synthesized or inherited) of symbols to its left in the right-hand-side
+
+## Action routine
+
+A semantic function that is executed at a particular point in a parse. 
+
+## Constructing an Abstract Syntax Tree
+
+The *concrete syntax* is the syntax that is parsed. Abstract syntax is much simpler. ASTs only handle syntactically valid expressions. 
+
+Recall: The order in which a CFG is specified implies precedence for operators (e.g., for addition, subtraction). AST no longer deals with precedence or associativity. 
+
+### OO Implementation
+
+* All nodes in AST are sublcasses of a common abstract base class
+* In a compiler, we could use the visitor pattern to traverse the tree for type checking and code generation
+    * Define a class for each non-terminal in the abstract syntax
+    * If there are multiple productions for a non-terminal, make the non-terminal class abstract, and introduce a subclass for each production
+
+### Visitor pattern
+
+Separate code for what to do when traversing a data structure from the code for the data structure itself. The code for traversal encapsulated in a Visitor class. Action taken at a node can depend on the type of node and the type of the Visitor (double dispatch). 
+
+Useful in compilers because we traverse the AST multiple times with different purposes (type checking, code generation).
