--- a/_posts/lecture-notes/plp/2017-02-08-15.md
+++ b/_posts/lecture-notes/plp/2017-02-08-15.md
@@ -4,6 +4,7 @@ title:  "PLP: Lecture 15"
 date:   2017-02-08
 category: lecture-notes
 keywords:
+- type systems
 ---
 
 <script type="text/javascript" async
