--- a/_posts/lecture-notes/plp/2017-02-10-16.md
+++ b/_posts/lecture-notes/plp/2017-02-10-16.md
@@ -5,7 +5,8 @@ date:   2017-02-10
 category: lecture-notes
 keywords:
 - type casting / 
-- type inference
+- type inference / 
+- composite types - records
 ---
 
 <script type="text/javascript" async
@@ -86,7 +87,7 @@ Rules:
 * Any two type constants (`int`, `double`, etc) unify only if they are the same
 * Any two type constructors (`array`, `record`, etc) unify only if they are of the same type constructor and all of their component types also unify
 
-## Composite types
+## Composite types - Records
 
 Introduced in Cobol. Usually consists of simpler types. 
 
