PLP Lecture 20, minor updates to homepage

--- a/_posts/lecture-notes/plp/2017-02-06-14.md
+++ b/_posts/lecture-notes/plp/2017-02-06-14.md
@@ -98,11 +98,7 @@ Ex:
 
 ## Orthogonality
 
-A collection of features is *orthogonal* if there are no restrictions on the ways in which the features can be combined 
-
-A useful goal when desigining a language
-
-Makes a language easy to understand, use, and reason about
+A collection of features is *orthogonal* if there are no restrictions on the ways in which the features can be combined. This is a useful goal when desigining a language. Makes a language easy to understand, use, and reason about.
 
 Ex. Pascal allows arrays of anything
 
