UF-ML: update to meeting 4 notice

--- a/_posts/uf-ml/2017-03-02-sp17-meeting-4.md
+++ b/_posts/uf-ml/2017-03-02-sp17-meeting-4.md
@@ -3,12 +3,12 @@ layout: post
 date:   2017-03-02
 presenters: Alex Wagner 
 papers: 
-- Batch Renormalization: Towards Reducing Minibatch Dependence in Batch-Normalized Models
-- Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift
+- Batch Renormalization- Towards Reducing Minibatch Dependence in Batch-Normalized Models
+- Batch Normalization- Accelerating Deep Network Training by Reducing Internal Covariate Shift
 
 paperurls: 
-- https://arxiv.org/pdf/1702.03275v1.pdf
-- https://arxiv.org/pdf/1502.03167.pdf
+- https://arxiv.org/abs/1702.03275
+- https://arxiv.org/abs/1502.03167
 
 categories:
 - ml-meetings
