Updates to PLP lecture 13

--- a/_posts/lecture-notes/plp/2017-02-03-13.md
+++ b/_posts/lecture-notes/plp/2017-02-03-13.md
@@ -63,10 +63,16 @@ If we say that attribute A.s **depends** on B.t (bc B.t is passed to a semantic 
 * Each inherited attribute of a right-hand-side symbol depends only on inherited attributes of the left-hand-side symbol or on attributes (synthesized or inherited) of symbols to its left in the right-hand-side
 
 ## Action routine
+ 
+A semantic function that is executed at a particular point in a parse. These are used for ad hoc translation schemes interleaved with parsing. 
 
-A semantic function that is executed at a particular point in a parse. 
+## Tree Grammars
+
+So far, attribute grammars have been used solely for decorating parse trees. AGs can also be used to decorate syntax trees. A CFG is meant to define (generate) a language composed of strings of tokens, where each string is the yield of a parse tree. A tree grammar is meant to define (or generate) the tree itself. Semantic rules attached to the productions of a tree grammar can be used to define the atrribute flow of a syntax tree in exactly the same way that semantic rules attached to the productions of a CFG are used to define the attribute flow of a parse tree. 
 
 ## Constructing an Abstract Syntax Tree
+
+ASTs are only built for syntactically valid programs according to CFG that have already been parsed. 
 
 The *concrete syntax* is the syntax that is parsed. Abstract syntax is much simpler. ASTs only handle syntactically valid expressions. 
 
