--- a/_posts/lecture-notes/plp/2017-02-06-14.md
+++ b/_posts/lecture-notes/plp/2017-02-06-14.md
@@ -24,7 +24,7 @@ MathJax.Hub.Config({
 
 Recall from last time, we are using the visitor pattern for creating the abstract syntax tree. 
 
-Type checking and code generation will use the visitor pattern in our project. 
+To do type checking and code generation in our project, we will use the visitor pattern. 
 
 ## Type systems
 
