--- a/_posts/lecture-notes/plp/2017-02-22-21.md
+++ b/_posts/lecture-notes/plp/2017-02-22-21.md
@@ -4,7 +4,7 @@ title:  "PLP: Lecture 21"
 date:   2017-02-22
 category: lecture-notes
 keywords:
-- structed control flow
+- structured control flow
 ---
 
 ## Structured vs Unstructured flow
