PLP: Exam 1 prep, adding to lecture notes

--- a/_posts/lecture-notes/plp/2017-01-11-4.md
+++ b/_posts/lecture-notes/plp/2017-01-11-4.md
@@ -55,8 +55,10 @@ Admits more than one parse tree for a sentence. Sad! Add rules to disambiguate. 
 
 ## Parsing Complexity
 
-There are $O(n^3)$ algorithms for any context-free grammar. For useful subsets of CFG, there are parsers that are linear. We are interested in LL (left-to-right, leftmost derivation) top-down grammars. 
+There are $O(n^3)$ algorithms for any context-free grammar. For useful subsets of CFG, there are parsers that are linear. We are interested in **LL (left-to-right, leftmost derivation)** top-down grammars. 
 
 [Def](https://en.wikipedia.org/wiki/Context-free_grammar#Derivations_and_syntax_trees): A **derivation** of a string for a grammar is a sequence of grammar rule applications that transforms the start symbol into the string. A derivation proves that the string belongs to the grammar's language. 
 
 In a *leftmost derivation*, the next nonterminal to rewrite is always the leftmost. 
+
+An **LR (left-to-right, rightmost derivation)** does bottom-up parsing.
