--- a/_posts/lecture-notes/plp/2017-01-20-7.md
+++ b/_posts/lecture-notes/plp/2017-01-20-7.md
@@ -4,6 +4,7 @@ title:  "PLP: Lecture 7"
 date:   2017-01-20
 category: lecture-notes
 keywords: 
+- associativity & precedence /
 - recursive descent parsers
 ---
 
@@ -19,6 +20,24 @@ MathJax.Hub.Config({
 </script>
 
 ---
+## Associativity and Precedence
+
+* Productions that are left-recursive force evaluation in left-to-right order (left associativity)
+* Productions that are right-recursive for evaluation in right-to-left order (right associativity)
+* Precedence is introduced by adding new non-terminal symbols. Cascade symbols with lowest precedence closest to the start symbol.
+
+Example: 
+
+* Precedence: (), - (unary), $\uparrow$, *, /, +-
+* Associativity: left: */+-, right: $\uparrow$
+
+```
+expr ::= term | expr + term | expr - term
+term ::= factor | term * factor | term / factor
+factor ::= primary $\uparrow$ factor | primary
+primary ::= - primary | element
+element ::= x | y | z | ( expr )
+```
 
 ## Syntax Errors in Recursive Descent Parsing
 
@@ -31,3 +50,5 @@ There are several approaches:
     * Phrase level recovery
     * Context specific
     * Exception based
+
+We will use exception based error handling for our project. This seems to be the most common approach.
