--- a/_posts/lecture-notes/plp/2017-01-25-9.md
+++ b/_posts/lecture-notes/plp/2017-01-25-9.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "PLP: Lecture 8"
-date:   2017-01-23
+title:  "PLP: Lecture 9"
+date:   2017-01-25
 category: lecture-notes
 keywords:
 - variable access / 
@@ -23,15 +23,14 @@ MathJax.Hub.Config({
 
 ## Implementation of variable access
 
-* Most-closely nested rule
-* Use static links
-* The frame of some subroutine contains a pointer (static link) to the surrounding scope
-* Dereference the static chain twice and then apply offset to access scope from calling scope of the immediate calling scope!
+* (Algol-style) Most-closely nested rule: a name that is introduced in a declaration is known in the scope in which it is declared, and in each internally nested scope, unless it is hidden by another declaration of the same name in one or more nested scopes.
+* In C++, `::X` referes to a global declaration of `X`, regardless of whether the current xubroutine also has an `X`
+* Use *static links* in each frame on the stack that points to the "parent" frame; the most recent invocation of the lexically surrounding subroutine. The resulting *static chain* can be traversed by deferencing the chain `j` times in order to find a variable declared `j` subroutine scopes outward.
 
 ## Declaration order
 
-* Is a declaration in a scope valid in the entire scope? Or just in the text following the definition? 
-* If a name must be declared before used, then how can we allow recursive types and subroutines?
+* Is a declaration in a scope valid in the entire scope? Or just in the text following the definition? This is different for each language! 
+* If a name must be declared before used, then how can we allow recursive types and subroutines? C and C++ handles this by separating *declaration* and *definition*.
 
 ### Pascal
 
