--- a/_posts/lecture-notes/plp/2017-01-30-11.md
+++ b/_posts/lecture-notes/plp/2017-01-30-11.md
@@ -37,9 +37,11 @@ Most languages with static scoping use deep binding.
 
 ## Definitions
 
-A **closure** is a reference to a subroutine together with a representation of the binding environment. This is necessary with deep binding. With an association list, a closure can be represented by a pointer to the location in the stack. 
+A **closure** is a reference to a subroutine together with a representation of the binding environment. This is necessary with deep binding. With an association list (dynamic scoping), a closure can be represented by a top-of-stack (beginning of A-list) pointer. New bindings created within the subroutine are pushed using a temporary pointer. Implementation with a central reference table is more complicated.
 
-A **first class object** can be passed as a parameter, returned, and assigned to a variable (e.g., simple types, functions in functional languages). A **second class object** can be  passed but not returned or assigned. **Third class objects** can't be passed, returned, or assigned.
+Static scoping and shallow binding aren't mixed in programming languages, as the combination doesn't make much sense. For static scoping and deep binding (e.g., Python), a closure for a subroutine saves a pointer to the subroutine's code together with the static link that the subroutine would use if it were called immediately.  
 
-See Scott pg. 156 for the Scheme example on why the desire to maintain stack based allocation is the reason that most imperative languages do not have *first class subroutines*. 
+A **first class object** can be passed as a parameter, returned, and assigned to a variable (e.g., simple types, functions in functional languages). A **second class object** can be passed but not returned or assigned. **Third class objects** can't be passed, returned, or assigned.
+
+See Scott pg. 156 for the Scheme example on why the desire to maintain stack-based allocation is the reason that most imperative languages do not have *first class subroutines*. For functional programming languages that allow local objects to have *unlimited extent* (i.e., their lifetimes continue indefinitely), the local objects can only be reclaimed when the garbage collection system is able to prove that they will never be used again.
 
