--- a/_posts/lecture-notes/plp/2017-02-13-17.md
+++ b/_posts/lecture-notes/plp/2017-02-13-17.md
@@ -35,7 +35,7 @@ Example is C,
 int myArray[45];
 ```
 
-If the array should only exist throughout the execution of a subroutine and the shape is known at compile time, the object can be allocated on the subroutine's stack frame at runtime. In contrast, if the shape isn't known until elaboration time, another level of indirection is needed to allocate on stack frame. Must introduce a *dope vector*, which is a runtime descriptor contianing information about the shape of the array. The location of the dope vector is known at compile time and so the array itself can be allocated elsewhere on the stack.
+If the array should only exist throughout the execution of a subroutine and the shape is known at compile time, the object can be allocated on the subroutine's stack frame at runtime. In contrast, if the shape isn't known until elaboration time, another level of indirection is needed to allocate on stack frame. Must introduce a *dope vector*, which is a runtime descriptor containing information about the shape of the array. The location of the dope vector is known at compile time and so the array itself can be allocated elsewhere on the stack.
 
 For arbitrary lifetime and the shape not known until run time, declarations only create references and space allocation on heap under explicit control of programmer. To support dynamic shape, stack cannot really be used. Usually involves allocating a new array, copying contents, deallocating old array. Some languages allow Strings to dynamically change size, but not arbitrary arrays. Certain "nice" assumptions about Strings can be made, allowing for this.
 
