Updates to PLP Ch 7 notes

--- a/_posts/lecture-notes/plp/2017-02-06-14.md
+++ b/_posts/lecture-notes/plp/2017-02-06-14.md
@@ -40,9 +40,9 @@ A **type system** is a mechanism to define types and a way to associate types wi
 
 ### Subroutine types
 
-Subroutines have types in languages were they are first or second class objects. Type information allows the language to restrict the set of subroutines to those with a particular signature/interface.
+Subroutines have types in languages where they are first or second class objects. Type information allows the language to restrict the set of subroutines to those with a particular signature/interface.
 
-Subroutines do not need types in languages where language is statically scoped, subroutines are third class objects; hence, compiler can always identify which subroutine a name refers to.
+Subroutines do not need types in languages where language is statically scoped and subroutines are third class objects; the compiler can always identify which subroutine a name refers to.
 
 ## Type checking
 
@@ -92,7 +92,7 @@ An interface consisting of a set of operations with well-defined semantics
 Ex: 
 
 1. int operations +,-,*,/,%
-2. abstract data types such as statck
+2. abstract data types such as stack
 3. algebraic specifications for types define a type without explicitly talking about the values
 4. Classes in OOP
 
