--- a/_posts/lecture-notes/plp/2017-02-08-15.md
+++ b/_posts/lecture-notes/plp/2017-02-08-15.md
@@ -46,7 +46,7 @@ In OO languages, there is difficulty mixing enums with inheritance. In Java, enu
 
 ## Subrange types
 
-Values are contiguous subset of value of a discrete base type.
+Values are contiguous subset of the values of a discrete base type.
 
 ```Pascal
 type test_score = 0..100.
@@ -69,11 +69,20 @@ Enforcing the rules of a type system
 
 ### Type equivalence
 
-How to define equivalence? Based on structural, name, etc.?
+How to define equivalence when users can define new types? Two main ways: structural and name equivalence.
 
-*structural equivalence* says two types are equivalent if they consist of the same components put together in the same way. This is problematic! *name equivalence* is based on lexical occurence. Most modern imperative languages use this. 
+*structural equivalence* says two types are equivalent if they consist of the same components put together in the same way. Appears in C and ML. It's principle problem is an inability to distinguish between types that the programmer may think of as distinct, but which happen by coincidence to have the same internal structure.
 
-With `aliases` such as `typedef`, have to decide between *loose* and *strict* name equivalence. For *loose*, aliases are equivalent in an otherwise name equivalent language. In *strict*, aliased types are not equivalent. 
+*name equivalence* is based on lexical occurence of type definitions. Most modern imperative languages use this. Appears in Java, C#, standard Pascal. Name equivalence is based on the assumption that if the programmer goes to the effort of writing two type definitions, then those definitions are probably mean to represent different types.
+
+With aliasing constructs such as `typedef`, have to decide between *loose* and *strict* name equivalence. For *loose name equivalence*, aliases are equivalent in an otherwise name equivalent language. In *strict name equivalence*, aliased types are not equivalent. 
+
+Under strict name equivalence, a declaration
+
+```
+type A = B
+```
+is considered a definition. A's type is different from B's type. Under loose name equivalence it is merely a declaration; A shares the definition of B.
 
 ## Type casting
 
@@ -83,6 +92,6 @@ Useful when:
 * Types have different sets of values, but intersection is represented in the same way (e.g., subtype of integers and integers)
 * Types have different low-level representations, but there is some sensible correspondence between them (e.g., short and int)
 
-Compiler generates run-time code for checking that the cast is valid. 
+Compiler generates run-time code for checking that the cast is valid. Some casts, e.g., converting from a `float` to an `int`, requires code to change the low-level representation of values. This can also cause a loss of fractional digits, and integer overflow can result.
 
 *Non-converting type cast* does not alter underlying bits, merely reinterpreting them. Breaks the language's type system! In C++, see `reinterpret_cast<T>()`. 
