--- a/_posts/lecture-notes/plp/2017-02-10-16.md
+++ b/_posts/lecture-notes/plp/2017-02-10-16.md
@@ -40,6 +40,12 @@ Has both explicit (cast) and implicit conversion cast.
 
 Losing precision by casting from a type with more bits to less bits (e.g., `double` to `float`) doesn't trigger a dynamic semantic error, but does cause undefined behavior. Also, going from a type with less bits to more bits generally involves sign-extending.
 
+## Overloading vs Coercion vs Polymorphism
+
+All three can be used to achieve a similar effect. An overloaded name can refer to more than one object. If the addition operation should accept two integers and two floating point numbers, an implementer can define two add operations that expect those argument types. Coercion is when a language allows a value of one type to be used in a context that expecdts another. If an integer and float is pass to the add op, a language can coerce the integer into a float. 
+
+Polymorphism likewise applies to code that is designed to work with multiple types. However, the types must generally have certain characteristics in common, and the code captures this commonality. For example, explicit parametric polymorphism (generics in C++).
+
 ## Universal reference types
 
 Most OO languages provide a tag to objects to identify their types at runtime. In Java, C#, this is a regular type cast, and in C++ there is *dynamic_cast* for this. 
@@ -88,6 +94,8 @@ Rules:
 * Any two type constructors (`array`, `record`, etc) unify only if they are of the same type constructor and all of their component types also unify
 
 ## Composite types - Records
+
+Scott Ch. 8
 
 Introduced in Cobol. Usually consists of simpler types. 
 
